--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li><a href="activities/Activity1.html" target="_blank">Activity 1: Curriculum Vitae</a></li>
             <li><a href="activities/Activity2.html" target="_blank">Activity 2: My First Styled Page</a></li>
             <li><a href="activities/Activity3.html" target="_blank">Activity 3: 3 Basic Parts of Computer</a></li>
-            <li><a href="midterm/MidTermProject.html" target="_blank">Mid-Term Project</a></li>
+            <li><a href="midterm/Agote - Tourism Website.html" target="_blank">Mid-Term Project</a></li>
             <li><a href="activities/Activity4.html" target="_blank">Activity 4: TV Schedule</a></li>
             <li><a href="activities/Activity5.html" target="_blank">Activity 5: Forms Site</a></li>
         </ul>
