--- a/midterm/index.html
+++ b/midterm/index.html
@@ -69,13 +69,13 @@
             <p>Experience the vibrant culture, unique traditions, and breathtaking scenery of the Philippines.</p>
         </div>
         <!-- Japan Pamphlet -->
-        <div class="pamphlet" onclick="window.location.href='midterm//Japan.html'">
+        <div class="pamphlet" onclick="window.location.href='midterm/Japan.html'">
             <img src="https://plus.unsplash.com/premium_photo-1690749740487-01bbb8e51e71?q=80&w=1530&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Japan">
             <h3>Japan</h3>
             <p>Immerse yourself in the rich heritage, stunning landscapes, and modern wonders of Japan.</p>
         </div>
         <!-- Cambodia Pamphlet -->
-        <div class="pamphlet" onclick="window.location.href='midterm//Cambodia.html'">
+        <div class="pamphlet" onclick="window.location.href='midterm/Cambodia.html'">
             <img src="https://images.unsplash.com/photo-1582414004129-a955c6087f5e?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cambodia">
             <h3>Cambodia</h3>
             <p>Discover the ancient temples, vibrant culture, and natural beauty of Cambodia.</p>
