--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <div class="content" id="web-activities">
         <h2>Web Activities</h2>
         <ul>
-            <li><a href="activities/Activity 1.html" target="_blank">Activity 1: Curriculum Vitae</a></li>
-            <li><a href="activities/Activity 2.html" target="_blank">Activity 2: My First Styled Page</a></li>
-            <li><a href="activities/Activity 3.html" target="_blank">Activity 3: 3 Basic Parts of Computer</a></li>
+            <li><a href="activities/activity1.html" target="_blank">Activity 1: Curriculum Vitae</a></li>
+            <li><a href="activities/activity2.html" target="_blank">Activity 2: My First Styled Page</a></li>
+            <li><a href="activities/activity3.html" target="_blank">Activity 3: 3 Basic Parts of Computer</a></li>
             <li><a href="midterm/index.html" target="_blank">Mid-Term Project</a></li>
-            <li><a href="activities/Activity 4.html" target="_blank">Activity 4: TV Schedule</a></li>
-            <li><a href="activities/Activity 5.html" target="_blank">Activity 5: Forms Site</a></li>
+            <li><a href="activities/activity4.html" target="_blank">Activity 4: TV Schedule</a></li>
+            <li><a href="activities/activity5.html" target="_blank">Activity 5: Forms Site</a></li>
         </ul>
     </div>
     <div class="content" id="about-me">
